[gd_scene load_steps=2 format=3 uid="uid://initials_entry"]

[ext_resource type="Script" path="res://scripts/ui/initials_entry.gd" id="1_script"]

[node name="InitialsEntry" type="Control"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 48
text = "ENTER INITIALS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Slot0" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="UpButton0" type="Button" parent="VBoxContainer/HBoxContainer/Slot0"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "^"

[node name="LetterLabel" type="Label" parent="VBoxContainer/HBoxContainer/Slot0"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton0" type="Button" parent="VBoxContainer/HBoxContainer/Slot0"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "v"

[node name="Slot1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="UpButton1" type="Button" parent="VBoxContainer/HBoxContainer/Slot1"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "^"

[node name="LetterLabel" type="Label" parent="VBoxContainer/HBoxContainer/Slot1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton1" type="Button" parent="VBoxContainer/HBoxContainer/Slot1"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "v"

[node name="Slot2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="UpButton2" type="Button" parent="VBoxContainer/HBoxContainer/Slot2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "^"

[node name="LetterLabel" type="Label" parent="VBoxContainer/HBoxContainer/Slot2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton2" type="Button" parent="VBoxContainer/HBoxContainer/Slot2"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "v"

[node name="OKButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "OK"

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Tap arrows or use keyboard"
horizontal_alignment = 1
vertical_alignment = 1
